force-app/main/default/objects/TV_Series__c/fields/Average_Rating__c.field-meta.xml
<CustomField>
    <fullName>Average_Rating__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Average Rating</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>