force-app/main/default/objects/TV_Series__c/fields/Picture_Preview__c.field-meta.xml
<CustomField>
    <fullName>Picture_Preview__c</fullName>
    <formula>if(ISBLANK(Picture_URL__c), &apos;&apos;, IMAGE(Picture_URL__c, &quot;Picture&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Picture Preview</label>
    <type>Text</type>
</CustomField>