force-app/main/default/objects/TV_Series__c/fields/Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>Picture_URL__c</fullName>
    <inlineHelpText>Provide publicly available link to Series Avatar. Currently supported web pages are: https://cdn.pixabay.com and https://wallpapers.com/. You need to use direct image url</inlineHelpText>
    <label>Picture URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>