force-app/main/default/objects/TV_Series__c/fields/Series_Name__c.field-meta.xml
<CustomField>
    <fullName>Series_Name__c</fullName>
    <label>Series Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>