force-app/main/default/objects/TV_Series__c/validationRules/Image_URL_must_be_one_of_allowed_domains.validationRule-meta.xml
<ValidationRule>
    <fullName>Image_URL_must_be_one_of_allowed_domains</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(BEGINS(Picture_URL__c, &quot;https://wallpapers.com/images&quot;)),
    NOT(BEGINS(Picture_URL__c, &quot;https://cdn.pixabay.com/photo&quot;))
)</errorConditionFormula>
    <errorDisplayField>Picture_URL__c</errorDisplayField>
    <errorMessage>Image must be hosted on one of the allowed domains and point to the direct image.</errorMessage>
</ValidationRule>