force-app/main/default/objects/TV_Series__c/listViews/All_TV_Series.listView-meta.xml
<ListView>
    <fullName>All_TV_Series</fullName>
    <columns>NAME</columns>
    <columns>Series_Name__c</columns>
    <columns>Average_Rating__c</columns>
    <filterScope>Everything</filterScope>
    <label>All TV Series</label>
</ListView>